@@ -30,6 +30,10 @@ Micronaut 2.1 introduces the concept of a default environment. One or more defau
 
 A new health endpoint resources `/health/liveness` and `/health/readiness` to distinguish health indicators purpose.
 
+==== @Order Annotation
+
+The ann:core.annotation.Order[] annotation has been added to support supplying bean order for factory methods or for those who prefer the use of annotations over the api:core.order.Ordered[] interface.
+
 === Module Upgrades
 
 TODO
